# ml-setup

./: .gitignore  ML_RULES .md  README.md  pyproject.toml
configs/: baseline.yaml
src/: utils.py
src/data/: kaggle_pull.py  make_dataset.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
src/visualization/: plots.py
